--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>Halo-Suit-Test-Server</groupId>
   <artifactId>Halo-Suit-Test-Server</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -17,4 +18,14 @@
       </plugin>
     </plugins>
   </build>
+  
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.6.2</version>
+  	</dependency>
+  </dependencies>
+  
 </project>
