--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
   		<artifactId>gson</artifactId>
   		<version>2.6.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
   </dependencies>
   
 </project>
